@@ -24,6 +24,7 @@ x2goclient (3.99.1.1-0~x2go1) UNRELEASED; urgency=low
     - The default of a 10 seconds SSH connection timeout is pretty low,
       especially when using tcp_wrappers with the identd option turned on.
       Wait for a 60 seconds timeout.
+    - On Mac OS X connect to Xserver via Unix file socket.
 
   [ Daniel Lindgren ]
   * New upstream version (3.99.1.1):
